@@ -27,7 +27,20 @@
 #
 # It is recommended that you run this program on each local Asterisk machine
 #
-# Copyright (C) 2017  Matt Florell <vicidial@gmail.com>    LICENSE: AGPLv2
+# LICENSE: AGPLv3
+#
+# Copyright (©) 2017 Matt Florell <vicidial@gmail.com>
+# Copyright (©) 2020      SNCT GmbH <info@snct-gmbh.de>
+#               2020      Jörg Frings-Fürst <open_source@jff.email>.
+#
+
+# Other - Changelog
+#
+# 2020-07-24 14:00 Change lisense to AGPLv3
+# 2020-07-24 14:14 On update server_updater first check if record exist.
+#
+
+
 #
 # version changes:
 # 41228-1659 - modified to compensate for manager output response hiccups
@@ -351,9 +364,7 @@ if($DB){print STDERR "\n|$SUrec|$stmtA|\n";}
 
 if ($SUrec < 1)
 	{
-	&get_time_now;
-
-	$stmtU = "INSERT INTO $server_updater set server_ip='$server_ip', last_update='$now_date';";
+	$stmtU = "INSERT INTO $server_updater set server_ip='$server_ip', last_update=NOW();";
 	if($DB){print STDERR "\n|$stmtU|\n";}
 	$affected_rows = $dbhA->do($stmtU);
 	}
@@ -1245,9 +1256,23 @@ sub get_current_channels
 
 		&get_time_now;
 
-	$stmtU = "UPDATE $server_updater set last_update='$now_date' where server_ip='$server_ip'";
-		if($DBX){print STDERR "\n|$stmtU|\n";}
-	$affected_rows = $dbhA->do($stmtU);
+	# first check if record exits
+	$SUrec=0;
+	$stmtA = "SELECT count(*) FROM server_updater where server_ip='$server_ip';";
+	$sthA = $dbhA->prepare($stmtA) or die "preparing: ",$dbhA->errstr;
+	$sthA->execute or die "executing: $stmtA ", $dbhA->errstr;
+	@aryA = $sthA->fetchrow_array;
+	$SUrec = $aryA[0];
+	if($DB){print STDERR "\n|$SUrec|$stmtA|\n";}
+	if ($SUrec < 1) {
+		$stmtU = "INSERT INTO server_updater set server_ip='$server_ip', last_update=NOW();";
+		if($DB){print STDERR "\n$stmtU\n";}
+		$affected_rows = $dbhA->do($stmtU);
+	} else {
+		$stmtA = "UPDATE server_updater set last_update=NOW() where server_ip='$server_ip'";
+		if($DB){print STDERR "\n$stmtA\n";}
+		$dbhA->do($stmtA);
+	}
 	}
 
 
