@@ -913,6 +913,9 @@
           agi/cm.agi.
     * Replace _QXZ with gettext version _(:
       - Update: www/agc/vicidial.php;
+    * On update server_updater first check if record exist:
+      - Update: bin/AST_update_AMI2.pl,
+          bin/AST_update.pl.
     * Change next release to 3.0.1.
 
 2.26.29
